--- a/build.gradle
+++ b/build.gradle
@@ -30,34 +30,60 @@ repositories {
 }
 
 dependencies {
-	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4"
-	compileOnly "org.projectlombok:lombok"
-	annotationProcessor "org.projectlombok:lombok"
-	implementation "org.springframework.boot:spring-boot-starter-web"
-	implementation "org.hibernate.validator:hibernate-validator:8.0.0.Final"
-	testImplementation "org.assertj:assertj-core:3.24.2"
-	testImplementation "com.google.code.bean-matchers:bean-matchers:0.14"
-	testImplementation "org.junit.platform:junit-platform-suite-engine:1.9.2"
-	testRuntimeOnly "com.h2database:h2"
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	
+	// Hibernate (ORM) - já incluído no spring-boot-starter-data-jpa
+	// Spring Data JPA usa Hibernate por padrão
+	
+	// Database
 	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testRuntimeOnly 'com.h2database:h2'
+	
+	// Flyway para migrations
+	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.flywaydb:flyway-database-postgresql'
+	
+	// JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+	
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	
+	// Swagger/OpenAPI
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+	
+	// Testes
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.assertj:assertj-core:3.24.2'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// Otimizações de build
+tasks.named('compileJava') {
+	options.encoding = 'UTF-8'
+	options.incremental = true
+}
+
+tasks.named('bootRun') {
+	jvmArgs = ['-Xmx512m', '-XX:+UseG1GC']
+}
+
+// Desabilitar tarefas desnecessárias em desenvolvimento
+tasks.named('jacocoTestReport') {
+	onlyIf { false }
 }
 
 publishing {
