--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,22 +5,41 @@ spring:
   profiles:
     active: ${PROFILE:dev}
   datasource:
-    driverClassName: org.postgresql.Driver
-    url: 
-      jdbc:postgresql://${DS_URL:localhost}:${DS_PORT:5432}/${DS_DATABASE:sansys_database}
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://${DS_URL:localhost}:${DS_PORT:5433}/${DS_DATABASE:tasklist_db}
     password: ${DS_PASS:postgres}
     username: ${DS_USER:postgres}
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: 'true'
+    show-sql: ${JPA_SHOW_SQL:false}
     hibernate:
-      ddl-auto: none
-    generate-ddl: 'false'
+      ddl-auto: validate
+    generate-ddl: false
+    properties:
+      hibernate:
+        format_sql: false
+        use_sql_comments: false
+        jdbc:
+          batch_size: 20
+        order_inserts: true
+        order_updates: true
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
+    schemas: public
+    validate-on-migrate: true
 management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include: "*"
 server:
   port: ${PORT:0}
   forward-headers-strategy: framework
@@ -34,10 +53,10 @@ logging:
 springdoc:
   api-docs:
     groups:
-      enabled: 'true'
+      enabled: "true"
     path: /doc/tasklist/v3/api-documents
   swagger-ui:
-    enabled: 'true'
+    enabled: "true"
     path: /doc/tasklist/v1/api.html
 api:
   version: v1
