Implement user details retrieval and enhance Gradle configuration
- Updated SecurityConfig to permit access to specific authentication endpoints.
- Added a new endpoint in AuthController to retrieve the current user's details.
- Enhanced AuthResponse to include user information.
- Introduced UserResponse DTO for user detail representation.
- Updated Gradle properties for improved JVM performance and build optimizations.
- Adjusted application.yml to set a default server port.

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,7 @@ tasks.named('compileJava') {
 
 tasks.named('bootRun') {
 	jvmArgs = ['-Xmx512m', '-XX:+UseG1GC']
+	standardInput = System.in
 }
 
 // Desabilitar tarefas desnecessárias em desenvolvimento
